--- a/index.html
+++ b/index.html
@@ -2,63 +2,57 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>HoopFreund – Coming Soon</title>
-  <style>
-    body {
-      background-color: #FEDAD7; /* Rosa Hintergrund */
-      color: #566E92;            /* Blauer Text */
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      text-align: center;
-      padding: 60px 20px;
-      margin: 0;
-    }
-
-    .container {
-      max-width: 600px;
-      margin: 0 auto;
-    }
-
-    h1 {
-      font-size: 2.5rem;
-      margin-bottom: 10px;
-    }
-
-    p {
-      font-size: 1.2rem;
-      margin-bottom: 20px;
-    }
-
-    .emoji {
-      font-size: 3rem;
-      margin-bottom: 1rem;
-    }
-
-    .links a {
-      display: inline-block;
-      margin: 0 10px;
-      color: #000000; /* Schwarz für Links */
-      text-decoration: none;
-      font-weight: bold;
-    }
-
-    .links a:hover {
-      text-decoration: underline;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>HoopFreund – dein freundlicher Hoopshop</title>
+    <style>
+        body {
+            background-color: #FEDAD7;
+            font-family: Arial, sans-serif;
+            color: #566E92;
+            text-align: center;
+            padding: 50px;
+        }
+        h1 {
+            font-size: 3em;
+            margin: 0.2em 0;
+        }
+        h2 {
+            font-size: 3em;
+            margin: 0.2em 0;
+        }
+        h3 {
+            font-size: 1.5em;
+            margin: 1em 0 1.5em 0;
+            color: #000000;
+        }
+        p {
+            font-size: 1.2em;
+            margin: 0.3em 0;
+        }
+        a {
+            font-weight: bold;
+            color: #000000;
+            text-decoration: none;
+            margin: 0 10px;
+        }
+        .emoji {
+            font-size: 2.5em;
+            margin-bottom: 0.3em;
+        }
+    </style>
 </head>
 <body>
-  <div class="container">
     <div class="emoji">🚧</div>
-    <h1>HoopFreund ist bald für dich da!</h1>
+    <h1>HoopFreund</h1>
+    <h2>– dein freundlicher Hoopshop –</h2>
+    <h3>Wir sind bald für dich da!</h3>
+    <br>
     <p>Hier entsteht etwas richtig Schönes für alle, die Hula Hoop lieben.</p>
     <p>Schau bald wieder vorbei oder folge uns auf Instagram:</p>
-
-    <div class="links">
-      <a href="https://www.instagram.com/hoopfreund" target="_blank">Instagram</a>
-      <a href="mailto:info@hoopfreund.de">E-Mail schreiben</a>
-    </div>
-  </div>
+    <p>
+        <a href="https://www.instagram.com/hoopfreund" target="_blank">Instagram</a>
+        <a href="mailto:info@hoopfreund.de">E-Mail schreiben</a>
+    </p>
 </body>
 </html>
