--- a/index.html
+++ b/index.html
@@ -40,6 +40,26 @@
             font-size: 2.5em;
             margin-bottom: 0.3em;
         }
+        
+        /* ---- MOBILE ANPASSUNG ---- */
+@media (max-width: 600px) {
+  h1 {
+    font-size: 2.2em; /* Überschrift kleiner auf Handy */
+  }
+
+  h2 {
+    font-size: 1.6em; /* Zweite Zeile kleiner auf Handy */
+  }
+
+  h3 {
+    font-size: 1.4em; /* Untertitel leicht verkleinern */
+  }
+
+  p {
+    font-size: 1.1em; /* Text etwas kleiner */
+  }
+}
+
     </style>
 </head>
 <body>
