--- a/index.html
+++ b/index.html
@@ -44,19 +44,22 @@
         /* ---- MOBILE ANPASSUNG ---- */
 @media (max-width: 600px) {
   h1 {
-    font-size: 2.2em; /* Überschrift kleiner auf Handy */
+    font-size: 2.2em;
   }
 
   h2 {
-    font-size: 1.6em; /* Zweite Zeile kleiner auf Handy */
+    font-size: 1.3em;
+    letter-spacing: -0.5px; /* etwas enger machen */
+    line-height: 1.2;        /* weniger Abstand zwischen Zeilen */
+    white-space: nowrap;     /* Zeilenumbruch verhindern */
   }
 
   h3 {
-    font-size: 1.4em; /* Untertitel leicht verkleinern */
+    font-size: 1.4em;
   }
 
   p {
-    font-size: 1.1em; /* Text etwas kleiner */
+    font-size: 1.1em;
   }
 }
 
