--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
   }
 
   h2 {
-    font-size: 1.3em;
-    letter-spacing: -0.5px; /* etwas enger machen */
-    line-height: 1.2;        /* weniger Abstand zwischen Zeilen */
-    white-space: nowrap;     /* Zeilenumbruch verhindern */
+    font-size: 1.5em;          /* etwas größer */
+    letter-spacing: -0.3px;    /* weniger komprimiert */
+    line-height: 1.2;
+    white-space: nowrap;       /* bleibt in einer Zeile */
   }
 
   h3 {
@@ -62,6 +62,7 @@
     font-size: 1.1em;
   }
 }
+
 
     </style>
 </head>
