--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
   }
 
   h2 {
-    font-size: 1.5em;          /* etwas größer */
-    letter-spacing: -0.3px;    /* weniger komprimiert */
+    font-size: 1.3em;
+    letter-spacing: -0.5px;
     line-height: 1.2;
-    white-space: nowrap;       /* bleibt in einer Zeile */
+    white-space: nowrap;
   }
 
   h3 {
